<resources>
    <string name="app_name">MyTomato</string>
    <string name="i_like_s">I Like %s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hi_s_today_is">Hi %s, Today is</string>
    <string name="_1_s">%d. %s</string>
    <string name="onGoing">ON GOING</string>
    <string name="completed">COMPLETED</string>
    <string name="d">%d</string>
    <string name="d_4">%d/4</string>
    <string name="pause">PAUSE</string>
    <string name="isNull">null</string>
    <string name="no_schedules">You have no Schedule today!!</string>
    <string name="isScheduleStarted">isScheduleStarted</string>
    <string name="input_pomodoro">INPUT POMODORO</string>
    <string name="please_add_the_schedule">Please Add the Schedule</string>
    <string name="input_task">INPUT TASK</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="task">TASK</string>
    <string name="settings">SETTINGS</string>
    <string name="news">NEWS</string>
    <string name="pomodoro">POMODORO</string>
    <string name="i_ve_been_resting">I\'ve been resting</string>
    <string name="rounds">Rounds</string>
    <string name="goals">Goals</string>
    <string name="schedules">SCHEDULES</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="setting">SETTING</string>
    <string name="extcode_com">extCode.com</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="urltoimage">urlToImage</string>
    <string name="_0">0</string>
    <string name="schedule">Schedule</string>
    <string name="matematika">MATEMATIKA</string>
    <string name="kerjakan_dari_halaman_1234_5678_pakai_kertas_polio">Kerjakan dari halaman 1234–5678 Pakai Kertas Polio</string>
    <string name="_08_00">08:00</string>
    <string name="hello_there">Hello There!!</string>
    <string name="may_i_know_your_name">May I Know your Name?</string>
    <string name="my_name_is">My Name is…</string>
    <string name="then_are_you_interested_in_one_of_the_topics_below">Then, are you interested in one of the topics below?</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="next">Next</string>
    <string name="_00_00">00:00</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>
    <string name="you_can_add_schedules_below_so_you_can_see_in_homepage">You can add schedules below, so you can see in Homepage</string>
    <string name="monday">Monday</string>
    <string name="changes_name_and_topic">Changes Name and Topic</string>
    <string name="changes_schedules">Changes Schedules</string>
    <string name="_22_08_2020">22/08/2020</string>
</resources>