<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startTimer"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_button_add_schedule"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/resetTimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetTimer"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ripple_button_add_schedule"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startTimer"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

</androidx.constraintlayout.widget.ConstraintLayout>